Les vrais fichiers

--- a/index.html
+++ b/index.html
@@ -1,22 +1,62 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
+<html>
+	<head>
+		<link rel="stylesheet" href="confidentialite.css">
+	</head>
+	<body>
+		<div class="header">
+			<img class="logo-armada" src="armada.png">
+			<h2>Politique de confidentialit&eacute; de l&apos;application mobile &laquo; L&apos;Aventure en Seine &raquo;</h2>
+			<img class="logo-sopra" src="sopra.jpg" alt="">
+		</div>
+		<div class="separator"></div>
+		<div class="container">
 
-    <!-- Declared Vars To Go Here -->
+			<p>
+			Cette politique de confidentialit&eacute; d&eacute;crit comment l&apos;application mobile &laquo; L&apos;Aventure en Seine &raquo; traite les informations et les donn&eacute;es collect&eacute;es lorsque vous utilisez l&apos;Application. Nous accordons une grande importance &agrave; la protection de votre vie priv&eacute;e et nous nous engageons &agrave; respecter la confidentialit&eacute; de toutes les informations que vous nous fournissez. Veuillez lire attentivement cette politique de confidentialit&eacute; pour comprendre comment nous traitons vos informations.
+			</p>
 
-    <meta charset="utf-8">
-    
-    <!-- Metadata -->
-    <!-- Page Name and Site Name -->
-    <title>Armada Rules</title>
+			<u><b>Collecte de donn&eacute;es</b></u>
+			<p>
+			L&apos;Application ne collecte aucune donn&eacute;e personnelle identifiable. Nous ne collectons pas votre nom, votre adresse e-mail, votre num&eacute;ro de t&eacute;l&eacute;phone ou toute autre information permettant de vous identifier personnellement. L&apos;Application ne stocke pas non plus de donn&eacute;es personnelles sur nos serveurs.
+			</p>
 
-    <!-- CSS -->
-    
-  </head>
 
-  <body>
+			<u><b>Donn&eacute;es techniques</b></u>
+			<p>
+			Lorsque vous utilisez l&apos;Application, nous pouvons collecter des informations techniques telles que le mod&egrave;le de votre appareil, la version du syst&egrave;me d&apos;exploitation, l&apos;adresse IP, les journaux d&apos;erreurs et d&apos;autres informations similaires. Ces informations sont collect&eacute;es de mani&egrave;re anonyme et ne sont pas associ&eacute;es &agrave; une personne identifiable.
+			</p>
 
-    <h1>Hello world!</h1>
-      <h2>index</h2>    
-  </body>
+
+			<u><b>Utilisation des donn&eacute;es</b></u>
+			<p>
+			Les donn&eacute;es collect&eacute;es par l&apos;Application sont utilis&eacute;es uniquement &agrave; des fins techniques, telles que le d&eacute;pannage d&apos;&eacute;ventuels probl&egrave;mes, l&apos;am&eacute;lioration de la performance de l&apos;Application et l&apos;analyse statistique. Ces donn&eacute;es ne sont pas utilis&eacute;es &agrave; des fins commerciales et ne sont pas partag&eacute;es avec des tiers.
+			</p>
+
+
+			<u><b>Cookies et technologies similaires</b></u>
+			<p>
+			L&apos;Application n&apos;utilise pas de cookies ni de technologies similaires pour collecter des informations vous concernant.
+			</p>
+
+
+			<u><b>Liens vers des sites tiers</b></u>
+			<p>
+			L&apos;Application peut contenir des liens vers des sites web de tiers. Veuillez noter que cette politique de confidentialit&eacute; ne s&apos;applique qu&apos;&agrave; l&apos;Application &laquo; L&apos;Aventure en Seine &raquo; et nous ne sommes pas responsables du contenu ou des pratiques de confidentialit&eacute; des sites tiers. Nous vous encourageons &agrave; lire les politiques de confidentialit&eacute; de ces sites web tiers avant de leur fournir vos informations.
+			</p>
+
+			<u><b>Modifications de la politique de confidentialit&eacute;</b></u>
+			<p>
+			Nous nous r&eacute;servons le droit de modifier cette politique de confidentialit&eacute; &agrave; tout moment. Toute modification sera publi&eacute;e sur cette page et la date de mise &agrave; jour en haut de la page sera r&eacute;vis&eacute;e. Nous vous encourageons &agrave; consulter r&eacute;guli&egrave;rement cette politique de confidentialit&eacute; pour vous tenir inform&eacute; de toute modification.
+			</p>
+
+			<u><b>Contactez-nous</b></u>
+			<p>
+			Si vous avez des questions concernant cette politique de confidentialit&eacute; ou si vous souhaitez exercer vos droits relatifs &agrave; vos informations, veuillez nous contacter en envoyant un email &agrave; l&apos;adresse <a href="mailto:aventureenseine@soprasteria.com?subject=Application Aventure en Seine">aventureenseine@soprasteria.com</a>.
+			</p>
+
+			<p>
+			Derni&egrave;re mise &agrave; jour : 26 mai 2023
+			</p>
+		</div>
+	</body>
 </html>
